--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* CSS mine */
+
+.invisibleScroll {
+    scrollbar-width: none;
+}
+
+.invisibleScroll::-webkit-scrollbar {
+    display: none;
+}
+
+.smallScroll::-webkit-scrollbar { 
+    width: 5px;
+    height: 5px;
+    margin-right: 8px;
+}
+
+.smallScroll::-webkit-scrollbar-thumb {
+    background: black;
+}
+
+.smallScroll::-webkit-scrollbar-thumb:hover {
+    background: green; 
+}
+
+.modal-content {
+    border-radius: 0px !important;
+    border-width: 0px !important;
+}
+
+.input-group-text {
+    border-radius: 0px !important;
+}
+
+.react-grid-item {
+    display: flex;
+    justify-content: center;
+}
