--- a/styles/globals.css
+++ b/styles/globals.css
@@ -256,3 +256,43 @@ canvas {
     flex-direction: column;
   }
 }
+
+.stickerButton {
+  border-radius: 0 !important;
+}
+
+@media screen and (max-width : 995px)
+{
+  .sticker
+  {
+    display: none;
+  }
+  .stickerButton
+  {
+    border-radius: 9999px !important;
+    padding: 6px !important;
+  }
+  .stickerSize
+  {
+    width: 125px;
+    height: 125px;
+    margin: 1rem;
+  }
+}
+
+@media print {
+  .noPrint{
+    display:none;
+  }
+  .print {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4rem;
+  }
+  .printImg {
+    display: block;
+    width: 75%;
+    height: 75%;
+  }
+}
